--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Nexter",
+    "name": "css-grid-example",
     "version": "1.0.0",
-    "description": "Nexter webpage",
+    "description": "",
     "main": "index.js",
     "scripts": {
         "watch:sass": "node-sass sass/main.scss css/style.css -w",
